--- a/style.css
+++ b/style.css
@@ -4,13 +4,13 @@
 }
 body{
     font-family: 'Paprika', cursive;
+    box-sizing: border-box;
 }
 h1{
     font-size: 50px;
 }
 
 .banner{
-    margin-top: 0px;
     display: flex;
     flex-wrap: wrap;
     padding-left: 12%;
@@ -18,6 +18,7 @@ h1{
     background-image: url(images/bg.png);
     background-repeat: no-repeat;
     object-fit: cover;
+    background-size: cover;
 }
 
 .half-width{
@@ -45,9 +46,37 @@ a{
     color: white;
     font-size: 1.2rem;
 }
+.banner2{
+    display: flex;
+    width: 100%;
+    margin-top: 10%;
+    background-image: url(images/bg2.png);
+    object-fit: cover;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+}
+.half{
+    width: 50%;
+    margin-left: 7%;
+}
+.half img{
+    width: 40%;
+}
+.half2{
+    width: 40%;
+    margin-right: 10%;
+}
+.resume{
+    border: none;
+    background-image: linear-gradient(orange, rgb(230, 74, 35));
+}
+.resume a{
+    color: black;
+}
 
 
-
+/* mediaquary start */
 @media  screen and (max-width: 992px) {
     .banner{
         flex-direction: column;
