--- a/style.css
+++ b/style.css
@@ -75,6 +75,61 @@ a{
     color: black;
 }
 
+.head-h2{
+    margin: 50px;
+}
+.head-h2 h2{
+    margin-left: 100px;
+}
+.end{
+    display: flex;
+    width: 100%;
+}
+.card1{
+    width: 50%;
+
+}
+.card1-1{
+    width:50%;
+    height: 300px;
+    margin: 0 0 0 300px;
+    border-left: 1px solid gray;
+    box-shadow: 4px 1px 3px 2px gray;
+    border-radius: 5px;
+}
+.card1-1 h2{
+    padding-top: 15px;
+}
+
+.card2-2 h2{
+    padding-top: 15px;
+}
+
+.card2{
+    width: 50%;
+}
+.card1-1 h2{
+    text-align: center;
+}
+.card2-2 h2{
+    text-align: center;
+    
+}
+.card2-2{
+    width:50%;
+    height: 300px;
+    text-align: left;
+    border-left: 1px solid gray;
+    box-shadow: 4px 1px 3px 2px gray;
+    border-radius: 5px;
+}
+
+#footer{
+    width: 100%;
+    height: 50px;
+    margin-top: 20px;
+}
+
 
 /* mediaquary start */
 @media  screen and (max-width: 992px) {
