--- a/style.css
+++ b/style.css
@@ -39,8 +39,14 @@ h1{
     border: none;
     border-radius: 5px;
     margin-top: 10px;
+    transition: .3s;
 
 }
+.button:hover{
+    background-image: linear-gradient(red, orange);
+    transform: scale(1.2);
+}
+
 a{
     text-decoration: none;
     color: white;
@@ -70,11 +76,19 @@ a{
 .resume{
     border: none;
     background-image: linear-gradient(orange, rgb(230, 74, 35));
+    border-radius: 5px;
+    transition: .2s;
 }
 .resume a{
-    color: black;
+    color: white;
+    box-shadow: 2px 1px 2px 1px gray;
+    font-size: 1.2rem;
 }
 
+.resume:hover{
+    background-image: linear-gradient(red, orange);
+    transform: scale(1.2);
+}
 .head-h2{
     margin: 50px;
 }
@@ -92,10 +106,11 @@ a{
 .card1-1{
     width:50%;
     height: 300px;
-    margin: 0 0 0 300px;
+    margin: 0 0 0 290px;
     border-left: 1px solid gray;
     box-shadow: 4px 1px 3px 2px gray;
     border-radius: 5px;
+    transition: .2s;
 }
 .card1-1 h2{
     padding-top: 15px;
@@ -122,8 +137,17 @@ a{
     border-left: 1px solid gray;
     box-shadow: 4px 1px 3px 2px gray;
     border-radius: 5px;
+    transition: .2s;
 }
 
+.card2-2:hover{
+    transform: scale(1.2);
+    margin-left: 10px;
+}
+.card1-1:hover{
+    transform: scale(1.2);
+    margin-right: 10px;
+}
 #footer{
     width: 100%;
     height: 50px;
